labs/old-2018-lab1/testsuite/bad/bad033.cc
int foo() {
	while (5)
}
